--- a/placeholder-api-addon/pom.xml
+++ b/placeholder-api-addon/pom.xml
@@ -31,6 +31,12 @@
             <version>1.17-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.alex9849</groupId>
+            <artifactId>advancedregionmarket</artifactId>
+            <version>3.3.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
